--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title}}</title>
-    <link rel="stylesheet" href="/css/styles.css"> <!-- Puedes añadir estilos aquí -->
+    <link rel="stylesheet" href="/css/styles.css"> <!-- Estilos generales -->
 </head>
 <body>
     <header>
